[feat-streams]-work on streams